# bog

./: .claude-rules  .gitignore  COMPLETE_FINAL_SUMMARY.md  CRITICAL_BUGS_FOUND.md  Cargo.toml  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FINAL_CODE_REVIEW.md  FINAL_DELIVERY.md  FINAL_HONEST_ASSESSMENT.md  FIXES_APPLIED.md  HUGINN_API_AUDIT.md  HUGINN_FEATURE_REQUESTS.md  HUGINN_REQUIREMENTS.md  IMPLEMENTATION_COMPLETE.md  MARKET_MAKING_THEORY.md  MEASURED_PERFORMANCE_COMPLETE.md  OPTIMIZATION_PARADOX_EXPLAINED.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_REPORT.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS.md  QUALITY_REVIEW.md  README.md  REFACTOR_PLAN.md  RE_AUDIT_COMPLETE.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  SESSION_SUMMARY.md  SIMPLE_SPREAD_EXAMPLE.md  TDD_FINAL_SUMMARY.md  TDD_IMPLEMENTATION_SUMMARY.md  TDD_PROGRESS_REPORT.md  VERIFICATION_REPORT.md  VERIFIED_PERFORMANCE.md  benchmark.sh  libgap_detector.rlib  production-readiness-assessment.md
.cargo/: config.toml
benchmarks/: migrate_historical_data.py  process_benchmarks.py
benchmarks/raw/2025-11/2025-11-19_120000_unknown/: full_suite.txt  system_info.env
benchmarks/raw/2025-11/2025-11-21_120000_unknown/: system_info.env
bog-bins/: Cargo.toml  README.md
bog-bins/src/: common.rs  lib.rs
bog-core/: Cargo.toml  Cargo.toml.bak  README.md
bog-core/benches/: BASELINE.md  README.md  atomic_bench.rs  circuit_breaker_bench.rs  conversion_bench.rs  depth_bench.rs  engine_bench.rs  fill_processing_bench.rs  inventory_strategy_bench.rs  multi_tick_bench.rs  order_fsm_bench.rs  reconciliation_bench.rs  resilience_bench.rs  throughput_bench.rs  tls_overhead_bench.rs
bog-core/examples/: production_monitoring.rs  shared_memory_feed.rs
bog-core/fuzz/: Cargo.toml  README.md
bog-core/fuzz/fuzz_targets/: fuzz_fixed_point_conversion.rs  fuzz_position_overflow.rs  fuzz_u64_conversion.rs
bog-core/src/: lib.rs  main.rs.old
bog-core/src/config/: constants.rs  mod.rs  profiles.rs  types.rs
bog-core/src/core/: circuit_breaker_fsm.rs  connection_fsm.rs  errors.rs  fixed_point_proptest.rs  mod.rs  order_fsm.rs  signal.rs  strategy_fsm.rs  types.rs
bog-core/src/data/: constants.rs  mod.rs  snapshot_builder.rs  types.rs  validator.rs
bog-core/src/engine/: alert_manager.rs  executor_bridge.rs  gap_recovery.rs  generic.rs  mod.rs  mod.rs.old  position_reconciliation.rs  risk.rs  simulated.rs  strategy_wrapper.rs  traits.rs
bog-core/src/execution/: journal.rs  journaled.rs  lighter.rs  mod.rs  order_bridge.rs  production.rs  simulated.rs  types.rs
bog-core/src/monitoring/: alert_rules.rs  alerts.rs  metrics.rs  mod.rs  runtime.rs  server.rs
bog-core/src/orderbook/: depth.rs  l2_book.rs  mod.rs  stub.rs
bog-core/src/perf/: cpu.rs  metrics.rs  mod.rs  pools.rs
bog-core/src/resilience/: backoff.rs  circuit_breaker.rs  circuit_breaker_v2.rs  gap_detector.rs  health.rs  kill_switch.rs  mod.rs  panic.rs  reconnect.rs  stale_data.rs
bog-core/src/risk/: circuit_breaker.rs  mod.rs  pre_trade.rs  rate_limiter.rs  types.rs
bog-core/src/strategy/: inventory_based.rs  mod.rs  simple_spread.rs  types.rs
bog-core/src/testing/: helpers.rs  mock_huginn.rs  mod.rs
bog-core/src/utils/: logger.rs  metrics.rs  mod.rs
bog-core/tests/: backpressure_tests.rs  conditional_processing_tests.rs  depth_strategy_integration.rs  drawdown_repro.rs  end_to_end_integration_tests.rs  engine_integration.rs  entry_price_overflow_tests.rs  epoch_monitoring_tests.rs  fee_accounting_tests.rs  fill_queue_tests.rs  gap_detection_tests.rs  gap_recovery_tests.rs  huginn_real_integration_tests.rs  integration_test.rs  market_id_tests.rs  orderbook_overflow_tests.rs  orderid_wraparound_tests.rs  pnl_verification.rs  position_limit_repro.rs  position_limit_tests.rs  position_pnl_edge_cases.rs  position_update_repro.rs  position_update_unit.rs  pre_trade_limit_test.rs  realistic_executor_test.rs  realistic_fills_tests.rs  recovery_integration.rs  safety_integration_tests.rs  snapshot_flags_tests.rs  snapshot_protocol_tests.rs  snapshot_validation_tests.rs  stale_data_circuit_breaker_tests.rs  stale_data_tests.rs  strategy_limits_repro.rs  trading_safety_tests.rs  validator_crash_reproduction.rs  validator_edge_cases.rs
bog-debug/: Cargo.toml
bog-strategies/: Cargo.toml  README.md
bog-strategies/src/: fees.rs  inventory_based.rs  lib.rs  simple_spread.rs  test_helpers.rs  volatility.rs
config/: default.toml  development.toml  production.toml
data/: paper_trading_journal.jsonl
docs/: CODE_REVIEW_2025-11-22.md  HUGINN_INTEGRATION_GUIDE.md  INDEX.md  OPTIMIZATION_REPORT_2025-11-22.md  PROJECT_ROADMAP.md  README.md
docs/architecture/: STATE_MACHINES.md  fill-processing-trace.md  overflow-handling.md  system-design.md
docs/benchmarks/: INDEX.md  LATEST.md  README.md  latency-budget.md
docs/benchmarks/2025-11/: 2025-11-19_120000_unknown.md  2025-11-21_120000_unknown.md  2025-11-27_155701_M1.md  2025-11-27_155741_M4.md  MEASURED_PERFORMANCE_COMPLETE.md
docs/benchmarks/2025-11/2025-11-19/: REPORT.md  engine_only.txt
docs/benchmarks/2025-11/2025-11-21/: REPORT.md  full_suite.txt
docs/benchmarks/results/: README.md
docs/benchmarks/results/2025-11/: 2025-11-21_120000_M1.md  2025-11-27_M1.md  2025-11-27_c6in_xlarge.md
docs/deployment/: 24H_DEPLOYMENT_GUIDE.md  PAPER_TRADING_REALISM.md  PRODUCTION_READINESS.md  failure-modes.md  prometheus-alerts.yml
docs/design/: PHASE4_REALISTIC_FILLS.md
docs/guides/: benchmark-guide.md  command-reference.md  error-handling-guide.md  market-making-guide.md  market-selection.md  monitoring-guide.md  trait-implementation-guide.md
docs/performance/: MEASURED_PERFORMANCE_COMPLETE.md  latency-budget.md
monitoring/dashboards/: orderbook_dashboard.json
