[package]
name = "bog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "bog_core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
huginn.workspace = true
memmap2.workspace = true
libc.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
crossbeam.workspace = true
crossbeam-utils.workspace = true
atomic.workspace = true
tikv-jemallocator.workspace = true
core_affinity.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
erased-serde.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
ctrlc.workspace = true

# Random for OrderId generation and simulated execution
rand = "0.8"

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
bog-strategies = { path = "../bog-strategies" }
criterion.workspace = true
tempfile = "3.8"

[[bench]]
name = "engine_bench"
harness = false

[features]
default = []

# Strategy selection (mutually exclusive, enforced at binary level)
simple-spread = []
inventory-based = []

# Execution mode (mutually exclusive)
simulated = []
live = []

# Market configuration
market-1 = []
market-2 = []

# Risk limits - Position sizes (in BTC)
max-position-half = []      # 0.5 BTC
max-position-one = []       # 1.0 BTC
max-position-five = []      # 5.0 BTC

max-short-half = []         # 0.5 BTC
max-short-one = []          # 1.0 BTC
max-short-five = []         # 5.0 BTC

# Risk limits - Order sizes (in BTC)
max-order-tenth = []        # 0.1 BTC
max-order-half = []         # 0.5 BTC
max-order-one = []          # 1.0 BTC

min-order-milli = []        # 0.001 BTC
min-order-centi = []        # 0.01 BTC
min-order-tenth = []        # 0.1 BTC

# Risk limits - Loss limits (in USD)
max-daily-loss-100 = []
max-daily-loss-1000 = []
max-daily-loss-10000 = []

# Risk profiles (convenience bundles)
conservative = ["max-position-half", "max-order-tenth", "max-daily-loss-100"]
aggressive = ["max-position-five", "max-order-one", "max-daily-loss-10000"]

# Performance features
metrics = ["tracing/release_max_level_off"]  # Disable tracing in release
