[package]
name = "bog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "bog_core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
huginn.workspace = true
memmap2.workspace = true
libc.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
crossbeam.workspace = true
crossbeam-utils.workspace = true
atomic.workspace = true
tikv-jemallocator.workspace = true
core_affinity.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
erased-serde.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
ctrlc.workspace = true

# Random for OrderId generation and simulated execution
rand = "0.8"

# Signal handling for kill switch
signal-hook = "0.3"

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
bog-strategies = { path = "../bog-strategies" }
criterion.workspace = true
tempfile = "3.8"

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "depth_bench"
harness = false

[[bench]]
name = "conversion_bench"
harness = false

[[bench]]
name = "atomic_bench"
harness = false

[[bench]]
name = "tls_overhead_bench"
harness = false

[[bench]]
name = "resilience_bench"
harness = false

[[bench]]
name = "inventory_strategy_bench"
harness = false

[[bench]]
name = "circuit_breaker_bench"
harness = false

[[bench]]
name = "multi_tick_bench"
harness = false

[[bench]]
name = "order_fsm_bench"
harness = false

[[bench]]
name = "fill_processing_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "reconciliation_bench"
harness = false

[features]
default = []

# Strategy selection (mutually exclusive, enforced at binary level)
simple-spread = []
inventory-based = []

# Execution mode (mutually exclusive)
simulated = []
live = []

# Market configuration
market-1 = []
market-2 = []

# Risk limits - Position sizes (in BTC)
max-position-half = []      # 0.5 BTC
max-position-one = []       # 1.0 BTC
max-position-five = []      # 5.0 BTC
max-position-2btc = []      # 2.0 BTC

max-short-half = []         # 0.5 BTC
max-short-one = []          # 1.0 BTC
max-short-five = []         # 5.0 BTC
max-short-2btc = []         # 2.0 BTC

# Risk limits - Order sizes (in BTC)
max-order-tenth = []        # 0.1 BTC
max-order-half = []         # 0.5 BTC
max-order-one = []          # 1.0 BTC

min-order-milli = []        # 0.001 BTC
min-order-centi = []        # 0.01 BTC
min-order-tenth = []        # 0.1 BTC

# Risk limits - Loss limits (in USD)
max-daily-loss-100 = []
max-daily-loss-1000 = []
max-daily-loss-10000 = []
max-daily-loss-20pct = []
max-drawdown-10pct = []

# Advanced risk controls
rate-limit-50ms = []        # Minimum 50ms between orders
rate-limit-200ms = []       # Minimum 200ms between orders
queue-warning-200 = []      # Warn if queue depth exceeds 200
stale-recovery-5pct = []    # Recover from stale data with 5% buffer
breaker-gap-5000 = []       # Circuit breaker triggers at 5000 message gap
breaker-spike-10pct = []    # Circuit breaker triggers on 10% price spike
breaker-zero-5 = []         # Circuit breaker triggers on 5 zero prices
inventory-impact-10bps = [] # Inventory impact parameter 10bps
vol-threshold-200bps = []   # Volatility threshold 200bps
fee-5bps = []               # Fee 5bps
fill-batch-200 = []         # Fill batch size 200
pool-size-2048 = []         # Pool size 2048

# Testing features
testing = []                # Enable test-only code paths

# Risk profiles (convenience bundles)
conservative = ["max-position-half", "max-order-tenth", "max-daily-loss-100"]
aggressive = ["max-position-five", "max-order-one", "max-daily-loss-10000"]

# Logging features (compile-time conditional logging)
debug-logging = []          # Enable hot_debug! macros (development only)
info-logging = []           # Enable cold_info! macros (testing/staging)
production = []             # Production build (only warn/error, no debug/info)

# Performance features
metrics = ["tracing/release_max_level_off"]  # Disable tracing in release
