[package]
name = "bog-strategies"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "bog_strategies"
path = "src/lib.rs"

[dependencies]
bog-core = { path = "../bog-core" }

# Workspace dependencies
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
