[package]
name = "bog-strategies"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "bog_strategies"
path = "src/lib.rs"

[dependencies]
bog-core = { path = "../bog-core" }

# Workspace dependencies
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[features]
default = []

# SimpleSpread spread configurations
spread-5bps = []
spread-10bps = []
spread-20bps = []

# Order size configurations
size-small = []   # 0.01 BTC
size-medium = []  # 0.1 BTC
size-large = []   # 1.0 BTC

# Minimum spread configurations
min-spread-1bps = []
min-spread-5bps = []
min-spread-10bps = []

# InventoryBased configurations
target-inventory-0 = []
target-inventory-positive = []
risk-low = []
risk-medium = []
risk-high = []
