[package]
name = "bog-strategies"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "bog_strategies"
path = "src/lib.rs"

[dependencies]
bog-core = { path = "../bog-core" }

# Workspace dependencies
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
huginn = { path = "../../huginn" }

[features]
default = []

# SimpleSpread spread configurations
spread-5bps = []
spread-10bps = []
spread-20bps = []

# Order size configurations
size-small = []   # 0.01 BTC
size-medium = []  # 0.1 BTC
size-large = []   # 1.0 BTC

# Minimum spread configurations
min-spread-1bps = []
min-spread-5bps = []
min-spread-10bps = []

# InventoryBased configurations
target-inventory-0 = []
target-inventory-positive = []
risk-low = []
risk-medium = []
risk-high = []

# Fee configurations (default: Lighter DEX - 0bps maker, 2bps taker)
maker-fee-0bps = []    # Lighter default (0.2 bps rounds to 0)
maker-fee-1bps = []
maker-fee-2bps = []
maker-fee-5bps = []
maker-fee-10bps = []

taker-fee-2bps = []    # Lighter default
taker-fee-5bps = []
taker-fee-10bps = []
taker-fee-20bps = []
taker-fee-30bps = []

# Depth awareness features (SimpleSpread enhancements)
depth-disabled = []      # Top-of-book only (original behavior, backward compatible)
depth-vwap = []          # Use VWAP for mid price calculation across depth
depth-imbalance = []     # Adjust spreads based on orderbook imbalance
depth-multi-level = []   # Quote at optimal orderbook level (not just best)

# Depth level configuration (how many levels to use)
depth-1 = []   # Top-of-book only (1 level)
depth-3 = []   # Use 3 levels
depth-5 = []   # Use 5 levels (default for depth features)
depth-10 = []  # Use all 10 levels (maximum depth)

logging = []   # Enable logging
